--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
   matrix:
     - DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='long,requires-vm'
     - DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='long' PHPUNIT_EXCLUDE_GROUP='requires-vm'
-    - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
+    # - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
 
 matrix:
   allow_failures:
@@ -34,6 +34,9 @@ cache:
   - "$HOME/.nvm"
   -  "/tmp/blt-sandbox-instance/.rules"
 
+services:
+- memcached
+
 addons:
   ssh_known_hosts: []
   chrome: stable
@@ -43,6 +46,8 @@ before_install:
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Decrypt private SSH key id_rsa_blt.enc, save as ~/.ssh/id_rsa_blt.
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
+  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - sudo service memcached status
   - phpenv config-rm xdebug.ini
   - phpenv config-add travis.php.ini
   - composer self-update
@@ -68,7 +73,7 @@ before_deploy:
   - cp ${TRAVIS_BUILD_DIR}/id_rsa_blted8.enc .
   # Remove the symlink definition for BLT from composer.json and require this specific commit for BLT.
   - composer config --unset repositories.blt
-  - composer require acquia/blt:9.x-dev#${TRAVIS_COMMIT}
+  - composer require acquia/blt:8.x-dev#${TRAVIS_COMMIT}
   - composer update --lock
   - echo "[![Build Status](https://travis-ci.org/acquia-pso/blted8.svg?branch=8.x)](https://travis-ci.org/acquia-pso/blted8)" >> README.md
   - git add -A
