--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,9 @@ env:
     - IS_PULL_REQUEST=$TRAVIS_PULL_REQUEST
     - BUILD_DIR=$TRAVIS_BUILD_DIR
     - DRUPAL_CORE_HEAD=8.5.x-dev
-    - DRUPAL_CORE_STABLE=8.5.6
   matrix:
-    - DRUPAL_CORE_VERSION=$DRUPAL_CORE_STABLE PHPUNIT_EXCLUDE_GROUP='long,requires-vm'
-    - DRUPAL_CORE_VERSION=$DRUPAL_CORE_STABLE PHPUNIT_GROUP='long' PHPUNIT_EXCLUDE_GROUP='requires-vm'
+    - DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='long,requires-vm'
+    - DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='long' PHPUNIT_EXCLUDE_GROUP='requires-vm'
     # - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
 
 matrix:
@@ -35,6 +34,9 @@ cache:
   - "$HOME/.nvm"
   -  "/tmp/blt-sandbox-instance/.rules"
 
+services:
+- memcached
+
 addons:
   ssh_known_hosts: []
   chrome: stable
@@ -44,6 +46,8 @@ before_install:
   - source ${BLT_DIR}/scripts/travis/exit_early
   # Decrypt private SSH key id_rsa_blt.enc, save as ~/.ssh/id_rsa_blt.
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then openssl aes-256-cbc -K $encrypted_c0b166e924da_key -iv $encrypted_c0b166e924da_iv -in id_rsa_blt.enc -out ~/.ssh/id_rsa -d; chmod 600 ~/.ssh/id_rsa; ls -lash ~/.ssh; eval "$(ssh-agent -s)"; ssh-add ~/.ssh/id_rsa; fi
+  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - sudo service memcached status
   - phpenv config-rm xdebug.ini
   - phpenv config-add travis.php.ini
   - composer self-update
