Use optimized classloader to avaoid file_exists() bug.

--- a/template/composer.json
+++ b/template/composer.json
@@ -2,7 +2,9 @@
     "license": "proprietary",
     "type": "project",
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "optimize-autoloader": true,
+        "apcu-autoloader": true
     },
     "require": {},
     "require-dev": {},
