--- a/travis.php.ini
+++ b/travis.php.ini
@@ -1,1 +1,15 @@
 memory_limit = -1
+opcache.interned_strings_buffer=16
+opcache.log_verbosity_level=2
+opcache.max_accelerated_files=10000
+opcache.memory_consumption=96
+opcache.optimization_level=0
+opcache.revalidate_freq=0
+opcache.validate_timestamps=1
+opcache.revalidate_path=0
+opcache.max_file_size=0
+opcache.use_cwd=1
+opcache.load_comments=1
+opcache.save_comments=1
+opcache.fast_shutdown=1
+opcache.max_file_size=0
