--- a/config/build.yml
+++ b/config/build.yml
@@ -197,27 +197,27 @@ tests:
     port: 9515
     args: null
   drupal:
-    # May be phpunit or run-tests.
-    test-runner: run-tests
-    sudo_run_tests: true
+    # May be phpunit or drupal-run-tests-script.
+    test-runner: drupal-run-tests-script
+    sudo-run-tests: true
     # Only chromedriver is supported at this time.
     web-driver: chromedriver
     sqlite: '${repo.root}/tmp/test.sqlite'
-    browsertest_output_directory: 'browser_output'
-    apache_run_group: 'www-data'
-    apache_run_user: 'www-data'
-    # mink_driver_args: ''
-    # mink_driver_args_phantomjs: ''
-    mink_driver_args_webdriver: '["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox"]}}, "http://localhost:9515"]'
-    # mink_driver_class: 'Drupal\FunctionalJavascriptTests\DrupalSelenium2Driver'
-    simpletest_base_url: '${project.local.protocol}://${project.local.hostname}'
-    simpletest_db: 'sqlite://localhost/${tests.drupal.sqlite}'
-    symfony_deprecations_helper: 'disabled'
+    browsertest-output-directory: 'browser_output'
+    apache-run-group: 'www-data'
+    apache-run-user: 'www-data'
+    # mink-driver-args: ''
+    # mink-driver-args-phantomjs: ''
+    mink-driver-args-webdriver: '["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox"]}}, "http://localhost:9515"]'
+    # mink-driver-class: 'Drupal\FunctionalJavascriptTests\DrupalSelenium2Driver'
+    simpletest-base-url: '${project.local.protocol}://${project.local.hostname}'
+    simpletest-db: 'sqlite://localhost/${tests.drupal.sqlite}'
+    symfony-deprecations-helper: 'disabled'
   phpunit:
     # - path: '${repo.root}/tests/phpunit'
     #   config: ${docroot}/core/phpunit.xml.dist
     #   directory: '${repo.root}/tests/phpunit'
-  run-tests:
+  drupal-tests:
 
 validate:
   deprecated:
