Moved pipelines-deploy from build event to post-deploy event

--- a/scripts/pipelines/acquia-pipelines.yml
+++ b/scripts/pipelines/acquia-pipelines.yml
@@ -36,9 +36,11 @@ events:
             type: script
             script:
               - source ${BLT_DIR}/scripts/pipelines/build_artifact
-        - deploy:
-            script:
-              - pipelines-deploy
+  post-deploy:
+    steps:
+      - deploy:
+          script:
+            - pipelines-deploy
   pr-merged:
     steps:
       - deploy:
