--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: true
 language: php
-dist: trusty
+dist: xenial
 
 php:
   - 7.1
@@ -36,6 +36,8 @@ cache:
 
 services:
 - memcached
+- mysql
+- xvfb
 
 addons:
   ssh_known_hosts: []
