--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         "composer-exit-on-patch-failure": true,
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "branch-alias": {
-            "dev-master": "10.0.x-dev"
+            "dev-master": "10.0.x-dev",
+            "10.x": "10.0.x-dev",
         },
         "installer-paths": {
             "build/docroot/core": ["type:drupal-core"],
