Fixes #2984 to allow admin username to be set by config.

--- a/config/build.yml
+++ b/config/build.yml
@@ -67,6 +67,7 @@ docroot: ${repo.root}/docroot
 
 # Drupal Account Credentials. These are used for installing Drupal.
 drupal:
+  #account.name: admin
   account.mail: no-reply@acquia.com
   locale: en
   local_settings_file: ${docroot}/sites/${site}/settings/local.settings.php
