--- a/scripts/travis/.travis.yml
+++ b/scripts/travis/.travis.yml
@@ -61,6 +61,8 @@ install:
   - source ${BLT_DIR}/scripts/travis/setup_project
 
 script:
+  # Uncomment these lines to test database updates using live content.
+  # - blt drupal:sync:default:site
   - source ${BLT_DIR}/scripts/travis/run_tests
 
 # The version below MUST match the php version indicated at the top of this file, otherwise the artifact won't build.
