Create branch alias for 10.x-dev to 10.0.x-dev.

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "composer-exit-on-patch-failure": true,
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "branch-alias": {
-            "dev-master": "10.0.x-dev"
+            "10.0.x-dev": "10.x-dev"
         },
         "installer-paths": {
             "build/docroot/core": ["type:drupal-core"],
