--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
         "phpstan/phpstan": "^0.11.1",
         "phpstan/phpstan-deprecation-rules": "^0.11.0",
         "phpunit/phpunit": "^4.8|^6.5",
-        "squizlabs/php_codesniffer": "^3.0.1",
+        "squizlabs/php_codesniffer": "^3.0.1"
     },
     "autoload": {
         "psr-4": {
