--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Acquia\\Blt\\Custom\\": "blt/src/"
+            "Example\\": "blt/src/"
         }
     },
     "autoload-dev": {
