--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ env:
     - BLT_DIR=$TRAVIS_BUILD_DIR
     - IS_PULL_REQUEST=$TRAVIS_PULL_REQUEST
     - BUILD_DIR=$TRAVIS_BUILD_DIR
-    - DRUPAL_CORE_HEAD=8.7.x-dev
+    - DRUPAL_CORE_HEAD=^8.7.0-alpha1
   matrix:
     - DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='long,requires-vm'
     - DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='long' PHPUNIT_EXCLUDE_GROUP='requires-vm'
-    # - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
+    - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
 
 matrix:
   allow_failures:
