--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,6 @@
     },
     "type": "composer-plugin",
     "license": "GPL-2.0-only",
-    "repositories": {
-        "drupal": {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    },
     "require": {
         "php": ">=7.1",
         "acquia/drupal-spec-tool": "^2.0.0",
@@ -34,11 +28,7 @@
         "doctrine/inflector": "~1.1.0",
         "drupal/coder": "^8.3.1",
         "drush/drush": "^9.5.0",
-        "drupal/config_split": "^1.0.0",
         "drupal/core": "^8.6.0",
-        "drupal/features": "^3.8.0",
-        "drupal/memcache": "2.0-alpha7",
-        "drupal/seckit": "^1.0.0-alpha2",
         "drupal-composer/drupal-scaffold": "^2.5.4",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
@@ -72,6 +62,9 @@
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "branch-alias": {
             "10.x-dev": "10.0.x-dev"
+        },
+        "installer-paths": {
+            "vendor/drupal/core":["type:drupal-core"]
         }
     },
     "bin": [
