--- a/template/blt/ci.blt.yml
+++ b/template/blt/ci.blt.yml
@@ -7,6 +7,11 @@
 # setup.dump-file: /tmp/my-dump-file.sql
 tests.run-server: true
 tests.drupal.sudo-run-tests: false
-# The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to test the site.
-project.local.hostname: 127.0.0.1:8888
-drush.debug: false
+
+# The tests.server.url is set to 0.0.0.0:8888 so that the test server can bind
+# to networks other than localhost.
+tests.server.url: http://0.0.0.0:8888
+
+# The local.hostname is set to 0.0.0.0:8888 to run drush runserver on all
+# available network interfaces.
+project.local.hostname: 0.0.0.0:8888
