--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
         }
     },
     "bin": [
-        "bin/blt"
+        "bin/blt",
+        "bin/blt.bat"
     ],
     "conflict": {
         "drupal/core": "7.*",
