Move Drupal core as well.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -39,6 +39,7 @@
         "drupal/cog": "^1.0.0",
         "drupal/config_split": "^1.0.0",
         "drupal/devel": "^2.0.0",
+        "drupal/core": "^8.5.0",
         "drupal/features": "^3.8.0",
         "drupal/memcache": "2.0-alpha7",
         "drupal/seckit": "^1.0.0-alpha2",
