Move Drupal module dependencies to project template (#3510)
* Removing more phing stuff.

* Moved Drupal modules into project template.

* Updated composer.lock.

* Separation of concerns.

* Move Drupal core as well.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -37,7 +37,12 @@
         "drupal/acquia_connector": "^1.5.0",
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
+        "drupal/config_split": "^1.0.0",
         "drupal/devel": "^2.0.0",
+        "drupal/core": "^8.5.0",
+        "drupal/features": "^3.8.0",
+        "drupal/memcache": "2.0-alpha7",
+        "drupal/seckit": "^1.0.0-alpha2",
         "drupal/shield": "^1.2.0",
         "drupal/qa_accounts": "^1.0.0-alpha1"
     },
