Make the composer create-project acquia/blt work on Windows (#3538)
* Made blt's create project to work on Windows.

* Run wizard with no interaction on Windows, on create-project.

* Removed non-existing --yes param to blt vm

* Use full paths on Windows for rsync.

* added missing space

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
         }
     },
     "bin": [
-        "bin/blt"
+        "bin/blt",
+        "bin/blt.bat"
     ],
     "conflict": {
         "drupal/core": "7.*",
