--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -31,6 +31,7 @@
         "apcu-autoloader": true
     },
     "require": {
+        "php": ">=7.1",
         "acquia/blt": "10.x-dev",
         "acquia/drupal-spec-tool": "^2.0.0",
         "acquia/lightning": "^3.1.0",
