--- a/scripts/gitlab/gitlab-ci.yml
+++ b/scripts/gitlab/gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
 test:
   stage: test
   script:
-    - blt tests --define tests.run-server=true --ansi --yes --verbose
+    - blt tests --define tests.run-server=true --ansi --no-interaction --verbose
 
 production:
   stage: deploy
