--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -31,7 +31,7 @@
         "apcu-autoloader": true
     },
     "require": {
-        "acquia/blt": "10.x-dev",
+        "acquia/blt": "^10.0.0-rc4",
         "acquia/drupal-spec-tool": "^2.0.0",
         "acquia/lightning": "^3.1.0",
         "drupal/acquia_connector": "^1.5.0",
