Minor cleanup before release.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -31,6 +31,7 @@
         "apcu-autoloader": true
     },
     "require": {
+        "php": ">=7.1",
         "acquia/blt": "10.x-dev",
         "acquia/drupal-spec-tool": "^2.0.0",
         "acquia/lightning": "^3.1.0",
@@ -38,14 +39,13 @@
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
         "drupal/config_split": "^1.0.0",
-        "drupal/core": "^8.5.0",
+        "drupal/core": "^8.6.0",
         "drupal/devel": "^2.0.0",
         "drupal/features": "^3.8.0",
         "drupal/memcache": "2.0-alpha7",
         "drupal/qa_accounts": "^1.0.0-alpha1",
         "drupal/seckit": "^1.0.0-alpha2",
-        "drupal/shield": "^1.2.0",
-        "php": ">=7.1"
+        "drupal/shield": "^1.2.0"
     },
     "require-dev": {
         "acquia/blt-require-dev": "^10.0.0-alpha1"
