--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "symfony/yaml": "^3.2.8",
         "tivie/php-os-detector": "^1.0",
         "typhonius/acquia-php-sdk-v2": "^1.0.3",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
+        "zaporylie/composer-drupal-optimizations": "^1.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "composer/composer": "^1.6.4",
