--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "acquia/drupal-spec-tool": "^2.0.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
+        "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "~1.4.6",
         "cweagans/composer-patches": "^1.6.5",
