Fixes #3665: Drupal Spec Tool dependency version. (#3667)
* Drupal Spec Tool dependency version.

* Updated composer.lock.

* Restored missing dependency.

* Bumped symfony config version.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "php": ">=7.1",
         "ext-json": "*",
         "composer-plugin-api": "^1.1.0",
-        "acquia/drupal-spec-tool": "^2.0.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
         "consolidation/comments": "^1.0",
@@ -39,6 +38,7 @@
         "grasmash/yaml-expander": "^1.2.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "sensiolabs/security-checker": "^5.0.0",
+        "symfony/config": "^3.0",
         "symfony/console": "^3.4.0",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^3.2.8",
