--- a/scripts/pipelines/acquia-pipelines.yml
+++ b/scripts/pipelines/acquia-pipelines.yml
@@ -45,14 +45,14 @@ events:
     steps:
       - deploy:
           script:
-            - pipelines-deploy
+            - if [ PIPELINE_CLOUD_REALM != "enterprise-g1" ]; then pipelines-deploy; fi
   pr-merged:
     steps:
       - deploy:
           script:
-            - pipelines-deploy
+            - if [ PIPELINE_CLOUD_REALM != "enterprise-g1" ]; then pipelines-deploy; fi
   pr-closed:
     steps:
       - deploy:
           script:
-            - pipelines-deploy
+            - if [ PIPELINE_CLOUD_REALM != "enterprise-g1" ]; then pipelines-deploy; fi
