Fixes #3148: Frivolous composer notices.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -106,6 +106,7 @@
             "rm -rf vendor composer.lock docroot/core docroot/modules/contrib docroot/profiles/contrib docroot/themes/contrib",
             "@composer clearcache --ansi",
             "@composer install --ansi"
-        ]
+        ],
+        "post-autoload-dump": "Acquia\\Blt\\Composer\\Hooks::postAutoloadDump"
     }
 }
