--- a/.travis.yml
+++ b/.travis.yml
@@ -47,14 +47,16 @@ matrix:
     - { name: "Integrated test w/ dev package versions & next minor dev version of Drupal core", env: ORCA_JOB=CORE_NEXT }
     # Custom jobs.
     - env: DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='drupal,requires-vm'
-  allow_failures:
     - env: DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='drupal'
+    - env: DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
+  allow_failures:
     - env: DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
     - env: ORCA_JOB=ISOLATED_DEV
     - env: ORCA_JOB=INTEGRATED_DEV
     - env: ORCA_JOB=CORE_NEXT
     # Temporary allowances.
     - env: ORCA_JOB=DEPRECATED_CODE_SCAN_SUT
+    - env: DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='drupal'
 
 before_install:
   # Exit build early if only documentation was changed in a Pull Request.
