Fixes #3386 to add drupal check for deprecation.

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
+        "mglaman/drupal-check": "^1.0.10",
         "oomphinc/composer-installers-extender": "^1.1",
         "sensiolabs/security-checker": "^5.0.0",
         "symfony/config": "^3.0",
