--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "consolidation/config": "^1.0.0",
         "consolidation/robo": "~1.4.6",
         "cweagans/composer-patches": "^1.6.5",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.4.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "doctrine/inflector": "~1.1.0",
@@ -51,6 +51,7 @@
         "drupal/drupal": "*"
     },
     "require-dev": {
+        "acquia/coding-standards": "^0.1.0",
         "composer/composer": "^1.6.4",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
@@ -80,7 +81,8 @@
             "vendor/drupal/core": [
                 "type:drupal-core"
             ]
-        }
+        },
+        "phpcodesniffer-search-depth": 4
     },
     "autoload": {
         "psr-4": {
