--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "drupal/drupal": "*"
     },
     "require-dev": {
-        "acquia/coding-standards": "^0.1.0",
+        "acquia/coding-standards": "dev-master",
         "composer/composer": "^1.6.4",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
