--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-2.0-only",
     "require": {
         "php": ">=7.1",
-        "acquia/blt": "^10.2.0",
+        "acquia/blt": "10.x-dev",
         "acquia/drupal-spec-tool": ">=2.0.0",
         "acquia/lightning": "^3.1.0",
         "drupal/acquia_connector": "^1.5.0",
