--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -9,10 +9,7 @@
   <!-- Run in parallel. -->
   <arg name="parallel" value="10"/>
 
-  <rule ref="AcquiaDrupalStrict">
-    <!-- BLT makes a lot of shell exec calls. -->
-    <exclude name="Security.BadFunctions.SystemExecFunctions"/>
-  </rule>
+  <rule ref="AcquiaDrupalStrict" />
 
   <file>.</file>
 
