Update ORCA to alpha18. (#3712)
* Update ORCA to alpha15.

* Updated to orca16.

* Composer updates.

* Fixing tests.

* Attempt to fix deprecation errors for annotationregistry.

* Updated ORCA to alpha17.

* Removed unneeded patch.

* Removed constraints on nette and mglaman.

* Updated ORCA to alpha18.

* Fixed phpcs security audit tests.

* Removed deprecated behat context.

* Use symfony/config 4.

* Removed unused context.

* Revert "Use symfony/config 4."

This reverts commit a034700a68abd4615ebe61343a38a8c89038bef4.

* Fixed deprecation issue.

* Make composer a production dependency since it's used in plugin.

* Fixed deprecated calls to RoboConfig::import.

* Composer back to dev dependency.

* Fixed problem with PHPStan.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,6 @@
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
         "mglaman/drupal-check": "^1.0.10",
-        "mglaman/phpstan-drupal": "0.11.7",
         "oomphinc/composer-installers-extender": "^1.1",
         "sensiolabs/security-checker": "^5.0.0",
         "symfony/config": "^3.0",
@@ -83,6 +82,11 @@
             "vendor/drupal/core": [
                 "type:drupal-core"
             ]
+        },
+        "patches": {
+            "pheromone/phpcs-security-audit": {
+                "false positives": "https://patch-diff.githubusercontent.com/raw/FloeDesignTechnologies/phpcs-security-audit/pull/43.patch"
+            }
         },
         "phpcodesniffer-search-depth": 4
     },
