--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "acquia/coding-standards": "^0.3.0",
         "composer/composer": "^1.6.4",
         "knplabs/github-api": "^2.6",
+        "php-coveralls/php-coveralls": "^2.1",
         "php-http/guzzle6-adapter": "^1.1",
         "phpunit/phpunit": "^4.8 || ^6.5",
         "squizlabs/php_codesniffer": "^3.0.1",
