Removed files provided by Composer Scaffold.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -31,7 +31,7 @@
     },
     "extra": {
         "composer-exit-on-patch-failure": true,
-        "composer-scaffold": {
+        "drupal-scaffold": {
             "locations": {
                 "web-root": "./docroot"
             },
