Updated composer dependencies.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -12,7 +12,7 @@
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
         "drupal/config_split": "^1.0.0",
-        "drupal/core": "^8.8.0",
+        "drupal/core-recommended": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/devel": "^2.0.0",
         "drupal/features": "^3.8.0",
