--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
-        "doctrine/inflector": "~1.1.0",
         "drupal/coder": "^8.3.1",
         "drupal/core": "^8.5.0",
         "drupol/phposinfo": "^1.6",
@@ -57,7 +56,7 @@
         "php-http/guzzle6-adapter": "^1.1",
         "phpunit/phpunit": "^4.8 || ^6.5",
         "squizlabs/php_codesniffer": "^3.0.1",
-        "webflo/drupal-core-require-dev": "^8.6.0"
+        "drupal/core-dev": "^8.8.0"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
